--- a/index.html
+++ b/index.html
@@ -3,28 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payment Successful</title>
+    <title>Payment Succeeded</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
             background-color: #f0f8ff;
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
         }
-        .message {
+        .container {
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
+            max-width: 400px;
+            width: 90%;
+            position: relative;
+        }
+        .container::before {
+            content: "";
+            background-image: url('confetti.png'); /* Add a path to the confetti image */
+            background-size: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            border-radius: 10px;
+        }
+        .checkmark {
+            font-size: 40px;
+            color: #4caf50;
         }
         h1 {
-            color: #4caf50;
+            font-size: 24px;
+            margin: 20px 0;
+        }
+        p {
+            font-size: 16px;
+            color: #555;
+            margin: 20px 0;
+        }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #333;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .button:hover {
+            background-color: #555;
         }
     </style>
 </head>
 <body>
-    <div class="message">
+    <div class="container">
+        <div class="checkmark">✔️</div>
         <h1>Payment Successful!</h1>
-        <p>Thank you for your purchase.</p>
+        <p>TThank you for your payment. Your transaction has been completed successfully, and a receipt has been sent to your email.</p>
+        <a class="button" href="#">Your dashboard</a>
     </div>
 </body>
 </html>
+
